src/tests/testfiles/function-declarations/12.txt
Error at 6:1: Redefinition of function 'main'
int main(void) {
^
